--- a/index.html
+++ b/index.html
@@ -348,7 +348,8 @@
     <div id="game-container">
         <!-- Introduction Screen -->
         <div id="intro-screen">
-            <h1>⚡ Faraday-Lenz Law Game ⚡</h1>
+            <h1>Faraday-Lenz Law Drill</h1>
+            <h2>Physics With Keith</h2>
             <div class="rules-box">
                 <h2>How to Play:</h2>
                 <ul>
